feat: bug 修复，以及优化
