# public/openapi.json
@@ -1,230 +1,1 @@
-{
-  "components": {
-    "schemas": {
-      "GetRecordsTestDto": {
-        "properties": { "content": { "type": "string" }, "name": { "type": "string" } },
-        "type": "object"
-      },
-      "Record": {
-        "properties": {
-          "id": {
-            "type": "integer",
-            "anyOf": [
-              { "type": "string", "enum": [""] },
-              {
-                "not": {
-                  "anyOf": [
-                    { "type": "string" },
-                    { "type": "number" },
-                    { "type": "boolean" },
-                    { "type": "integer" },
-                    { "type": "array" },
-                    { "type": "object" }
-                  ]
-                },
-                "nullable": true
-              }
-            ]
-          },
-          "name": { "type": "string", "minLength": 1 },
-          "content": { "type": "string", "minLength": 1 },
-          "location": { "type": "string" },
-          "createTime": {
-            "oneOf": [
-              { "format": "date", "type": "string" },
-              { "format": "date-time", "type": "string" }
-            ],
-            "anyOf": [
-              { "type": "string", "enum": [""] },
-              {
-                "not": {
-                  "anyOf": [
-                    { "type": "string" },
-                    { "type": "number" },
-                    { "type": "boolean" },
-                    { "type": "integer" },
-                    { "type": "array" },
-                    { "type": "object" }
-                  ]
-                },
-                "nullable": true
-              }
-            ]
-          },
-          "updateTime": {
-            "oneOf": [
-              { "format": "date", "type": "string" },
-              { "format": "date-time", "type": "string" }
-            ],
-            "anyOf": [
-              { "type": "string", "enum": [""] },
-              {
-                "not": {
-                  "anyOf": [
-                    { "type": "string" },
-                    { "type": "number" },
-                    { "type": "boolean" },
-                    { "type": "integer" },
-                    { "type": "array" },
-                    { "type": "object" }
-                  ]
-                },
-                "nullable": true
-              }
-            ]
-          }
-        },
-        "type": "object"
-      }
-    },
-    "securitySchemes": { "basicAuth": { "scheme": "basic", "type": "http" } }
-  },
-  "info": { "title": "API", "version": "1.0.0", "description": "Generated with `routing-controllers-openapi`" },
-  "openapi": "3.0.0",
-  "paths": {
-    "/ping": {
-      "get": {
-        "operationId": "PingController.ping",
-        "responses": { "200": { "content": { "text/html; charset=utf-8": {} }, "description": "Successful response" } },
-        "summary": "Return OK",
-        "tags": ["Ping"]
-      }
-    },
-    "records/": {
-      "get": {
-        "operationId": "RecordController.find",
-        "parameters": [{ "in": "query", "name": "opt", "required": false, "schema": {} }],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": { "schema": { "items": { "$ref": "#/components/schemas/Record" }, "type": "array" } }
-            },
-            "description": ""
-          }
-        },
-        "summary": "Return a list of records by opt",
-        "tags": ["Record"]
-      },
-      "patch": {
-        "operationId": "RecordController.update",
-        "parameters": [{ "in": "query", "name": "opt", "required": false, "schema": {} }],
-        "requestBody": {
-          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Record" } } },
-          "description": "Record",
-          "required": false
-        },
-        "responses": { "204": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Update a record",
-        "tags": ["Record"]
-      },
-      "post": {
-        "operationId": "RecordController.create",
-        "requestBody": {
-          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Record" } } },
-          "description": "Record",
-          "required": false
-        },
-        "responses": { "201": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Create a record",
-        "tags": ["Record"]
-      }
-    },
-    "records/count": {
-      "get": {
-        "operationId": "RecordController.count",
-        "parameters": [{ "in": "query", "name": "opt", "required": false, "schema": {} }],
-        "responses": {
-          "200": {
-            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Number" } } },
-            "description": ""
-          }
-        },
-        "summary": "Return a count of records by opt",
-        "tags": ["Record"]
-      }
-    },
-    "records/{id}": {
-      "get": {
-        "operationId": "RecordController.findById",
-        "parameters": [
-          { "in": "path", "name": "id", "required": true, "schema": { "type": "number" } },
-          { "in": "query", "name": "opt", "required": false, "schema": {} }
-        ],
-        "responses": {
-          "200": {
-            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Record" } } },
-            "description": ""
-          }
-        },
-        "summary": "Return a record by id",
-        "tags": ["Record"]
-      },
-      "patch": {
-        "operationId": "RecordController.updateById",
-        "parameters": [{ "in": "path", "name": "id", "required": true, "schema": { "type": "number" } }],
-        "requestBody": {
-          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Record" } } },
-          "description": "Record",
-          "required": false
-        },
-        "responses": { "204": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Update a record by id",
-        "tags": ["Record"]
-      },
-      "delete": {
-        "operationId": "RecordController.deleteById",
-        "parameters": [{ "in": "path", "name": "id", "required": true, "schema": { "type": "number" } }],
-        "responses": { "204": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Delete a record by id",
-        "tags": ["Record"]
-      }
-    },
-    "records/upsert": {
-      "post": {
-        "operationId": "RecordController.upsert",
-        "requestBody": {
-          "content": { "application/json": { "schema": { "items": { "type": "object" }, "type": "array" } } },
-          "description": "",
-          "required": false
-        },
-        "responses": { "204": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Upsert a record",
-        "tags": ["Record"]
-      }
-    },
-    "records/getByLike": {
-      "get": {
-        "operationId": "RecordController.getByLike",
-        "parameters": [
-          { "in": "query", "name": "content", "schema": { "type": "string" } },
-          { "in": "query", "name": "name", "schema": { "type": "string" } }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": { "schema": { "items": { "$ref": "#/components/schemas/Record" }, "type": "array" } }
-            },
-            "description": ""
-          }
-        },
-        "summary": "Return a list of records by dto",
-        "tags": ["Record"]
-      }
-    },
-    "records/deleteAndCreate/{id}": {
-      "post": {
-        "operationId": "RecordController.deleteAndCreate",
-        "parameters": [{ "in": "path", "name": "id", "required": true, "schema": { "type": "number" } }],
-        "requestBody": {
-          "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Record" } } },
-          "description": "Record",
-          "required": false
-        },
-        "responses": { "200": { "content": { "application/json": {} }, "description": "Successful response" } },
-        "summary": "Delete a record and create a record",
-        "tags": ["Record"]
-      }
-    }
-  },
-  "servers": [{ "url": "http://[::1]:3000/" }]
-}
+{"components":{"schemas":{"RecordDto":{"properties":{"id":{"type":"integer","not":{"type":"string","enum":[""]},"anyOf":[{"type":"string","enum":[""]},{"not":{"anyOf":[{"type":"string"},{"type":"number"},{"type":"boolean"},{"type":"integer"},{"type":"array"},{"type":"object"}]},"nullable":true}]},"name":{"type":"string","minLength":1},"content":{"type":"string","minLength":1},"location":{"type":"string"}},"type":"object"},"GetRecordsTestDto":{"properties":{"content":{"type":"string"},"name":{"type":"string"}},"type":"object"},"FindOneOptionsDto":{"properties":{"select":{"items":{},"type":"array"},"where":{"type":"object"},"order":{"type":"object"}},"type":"object"},"FindManyOptionsDto":{"properties":{"skip":{"type":"integer"},"take":{"type":"integer"},"select":{"items":{},"type":"array"},"where":{"type":"object"},"order":{"type":"object"}},"type":"object"},"Record":{"properties":{"id":{"type":"integer"},"name":{"type":"string"},"content":{"type":"string"},"location":{"type":"string"},"createTime":{"oneOf":[{"format":"date","type":"string"},{"format":"date-time","type":"string"}]},"updateTime":{"oneOf":[{"format":"date","type":"string"},{"format":"date-time","type":"string"}]}},"type":"object","required":["id","name","content","location","createTime","updateTime"]}},"securitySchemes":{"bearerAuth":{"type":"apiKey","scheme":"bearer","in":"header","name":"Authorization"}}},"info":{"title":"API","version":"1.0.0","description":"Generated with `routing-controllers-openapi`"},"openapi":"3.0.0","paths":{"/ping":{"get":{"operationId":"PingController.ping","responses":{"200":{"content":{"text/html; charset=utf-8":{}},"description":"Successful response"}},"summary":"Return OK","tags":["Ping"]}},"/records/":{"get":{"operationId":"RecordController.find","parameters":[{"in":"query","name":"skip","schema":{"type":"integer"}},{"in":"query","name":"take","schema":{"type":"integer"}},{"in":"query","name":"select","schema":{"items":{},"type":"array"}},{"in":"query","name":"where","schema":{"type":"object"}},{"in":"query","name":"order","schema":{"type":"object"}}],"responses":{"200":{"content":{"application/json":{"schema":{"items":{"$ref":"#/components/schemas/Record"},"type":"array"}}},"description":""}},"summary":"Return a list of records by opt","tags":["Record"]},"patch":{"operationId":"RecordController.update","parameters":[{"in":"query","name":"id","schema":{"type":"integer","not":{"type":"string","enum":[""]},"anyOf":[{"type":"string","enum":[""]},{"not":{"anyOf":[{"type":"string"},{"type":"number"},{"type":"boolean"},{"type":"integer"},{"type":"array"},{"type":"object"}]},"nullable":true}]}},{"in":"query","name":"name","schema":{"type":"string","minLength":1}},{"in":"query","name":"content","schema":{"type":"string","minLength":1}},{"in":"query","name":"location","schema":{"type":"string"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RecordDto"}}},"description":"RecordDto","required":true},"responses":{"204":{"content":{"application/json":{}},"description":"Successful response"}},"summary":"Update a record by where","tags":["Record"]},"post":{"operationId":"RecordController.create","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RecordDto"}}},"description":"RecordDto","required":true},"responses":{"201":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/String"}}},"description":""}},"summary":"Create a record","tags":["Record"]}},"/records/count":{"get":{"operationId":"RecordController.count","parameters":[{"in":"query","name":"id","schema":{"type":"integer","not":{"type":"string","enum":[""]},"anyOf":[{"type":"string","enum":[""]},{"not":{"anyOf":[{"type":"string"},{"type":"number"},{"type":"boolean"},{"type":"integer"},{"type":"array"},{"type":"object"}]},"nullable":true}]}},{"in":"query","name":"name","schema":{"type":"string","minLength":1}},{"in":"query","name":"content","schema":{"type":"string","minLength":1}},{"in":"query","name":"location","schema":{"type":"string"}}],"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Number"}}},"description":""}},"summary":"Return a count number of records by where","tags":["Record"]}},"/records/{id}":{"get":{"operationId":"RecordController.findById","parameters":[{"in":"path","name":"id","required":true,"schema":{"type":"string"}}],"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Record"}}},"description":""}},"summary":"Return a record by id","tags":["Record"]},"patch":{"operationId":"RecordController.updateById","parameters":[{"in":"path","name":"id","required":true,"schema":{"type":"string"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RecordDto"}}},"description":"RecordDto","required":true},"responses":{"204":{"content":{"application/json":{}},"description":"Successful response"}},"summary":"Update a record by id","tags":["Record"]},"delete":{"operationId":"RecordController.deleteById","parameters":[{"in":"path","name":"id","required":true,"schema":{"type":"string"}}],"responses":{"204":{"content":{"application/json":{}},"description":"Successful response"}},"summary":"Delete a record by id","tags":["Record"]}},"/records/upsert":{"post":{"operationId":"RecordController.upsert","requestBody":{"content":{"application/json":{"schema":{"items":{"type":"object"},"type":"array"}}},"description":"","required":true},"responses":{"204":{"content":{"application/json":{}},"description":"Successful response"}},"summary":"Upsert records","tags":["Record"]}},"/records/getByLike":{"post":{"operationId":"RecordController.getByLike","parameters":[{"in":"query","name":"content","schema":{"type":"string"}},{"in":"query","name":"name","schema":{"type":"string"}}],"responses":{"200":{"content":{"application/json":{"schema":{"items":{"$ref":"#/components/schemas/Record"},"type":"array"}}},"description":""}},"summary":"Return a list of records by like","tags":["Record"]}},"/records/deleteAndCreate/{id}":{"post":{"operationId":"RecordController.deleteAndCreate","parameters":[{"in":"path","name":"id","required":true,"schema":{"type":"string"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RecordDto"}}},"description":"RecordDto","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/String"}}},"description":""}},"summary":"Delete a record and create a record","tags":["Record"]}}},"security":[{"bearerAuth":[]}],"servers":[{"url":"http://127.0.0.1:3000/"}]}
